--- a/favorite-pet/index.html
+++ b/favorite-pet/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/favorite-pet/css/styles.css" type="text/css" rel="stylesheet">
+    <link href="../favorite-pet/css/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -14,7 +14,7 @@
     </nav>
     <div class="pet-info">
         <div class="pet-name">
-        <img src="/favorite-pet/images/Pacowithhat.jpeg.jpg">
+        <img src="../favorite-pet/images/Pacowithhat.jpeg.jpg">
         <p>Paco</p>
     </div>
     <div class="pet-stats">
@@ -28,7 +28,7 @@
     </div>
     <div class="pet-details">
 <p>
-    <img src="images/pacosleeping.jpeg.JPG">
+    <img src="..images/pacosleeping.jpeg.JPG">
     <br>
     Paco was born in April 2014, he is a mixed tabby and likes to recieve attention. He doesn't like to stay home alone at times.
 </p>
