--- a/favorite-pet/index.html
+++ b/favorite-pet/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="pet-details">
 <p>
-    <img src="..images/pacosleeping.jpeg.JPG">
+    <img src="../favorite-pet/images/pacosleeping.jpeg.JPG">
     <br>
     Paco was born in April 2014, he is a mixed tabby and likes to recieve attention. He doesn't like to stay home alone at times.
 </p>
